--- a/ddpg/nbs/replay_buffer.ipynb
+++ b/ddpg/nbs/replay_buffer.ipynb
@@ -99,6 +99,7 @@
     "        np.save(folder_name + '/states.npy', self.states)\n",
     "        np.save(folder_name + '/actions.npy', self.actions)\n",
     "        np.save(folder_name + '/rewards.npy', self.rewards)\n",
+    "        np.save(folder_name + '/next_states.npy', self.next_states)\n",
     "        np.save(folder_name + '/dones.npy', self.dones)\n",
     "        \n",
     "        dict_info = {\"buffer_counter\": self.buffer_counter, \"n_games\": self.n_games}\n",
@@ -110,9 +111,10 @@
     "        \"\"\"\n",
     "        Load the replay buffer\n",
     "        \"\"\"\n",
-    "        self.actions = np.load(folder_name + '/states.npy')\n",
+    "        self.states = np.load(folder_name + '/states.npy')\n",
     "        self.actions = np.load(folder_name + '/actions.npy')\n",
     "        self.rewards = np.load(folder_name + '/rewards.npy')\n",
+    "        self.next_states = np.load(folder_name + '/next_states.npy')\n",
     "        self.dones = np.load(folder_name + '/dones.npy')\n",
     "        \n",
     "        with open(folder_name + '/dict_info.json', 'r') as f:\n",
