--- a/maddpg/nbs/explore_env.ipynb
+++ b/maddpg/nbs/explore_env.ipynb
@@ -42,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env = make_env(\"simple_push\")"
+    "env = make_env(\"simple_adversary\")"
    ]
   },
   {
@@ -53,12 +53,12 @@
     {
      "data": {
       "text/plain": [
-       "[array([ 0.        ,  0.        ,  0.52995598,  0.05620819, -1.27963675,\n",
-       "         1.42135011, -0.37783193,  1.36780179]),\n",
-       " array([ 0.        ,  0.        ,  0.9077879 , -1.31159361,  0.25      ,\n",
-       "         0.75      ,  0.25      ,  0.9077879 , -1.31159361, -0.90180482,\n",
-       "         0.05354832,  0.1       ,  0.9       ,  0.1       ,  0.1       ,\n",
-       "         0.1       ,  0.9       ,  0.37783193, -1.36780179])]"
+       "[array([-0.87894163,  0.01820214,  0.10464143,  1.11771383, -1.37475538,\n",
+       "         0.59458323, -0.71699167,  0.94820296]),\n",
+       " array([ 0.49581375, -0.5763811 ,  0.49581375, -0.5763811 ,  1.47939682,\n",
+       "         0.5231306 ,  1.37475538, -0.59458323,  0.65776371,  0.35361973]),\n",
+       " array([-0.16194996, -0.93000083, -0.16194996, -0.93000083,  0.8216331 ,\n",
+       "         0.16951087,  0.71699167, -0.94820296, -0.65776371, -0.35361973])]"
       ]
      },
      "execution_count": 3,
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/plain": [
-       "[Discrete(5), Discrete(5)]"
+       "[Discrete(5), Discrete(5), Discrete(5)]"
       ]
      },
      "execution_count": 4,
@@ -98,7 +98,9 @@
     {
      "data": {
       "text/plain": [
-       "[Box(-inf, inf, (8,), float32), Box(-inf, inf, (19,), float32)]"
+       "[Box(-inf, inf, (8,), float32),\n",
+       " Box(-inf, inf, (10,), float32),\n",
+       " Box(-inf, inf, (10,), float32)]"
       ]
      },
      "execution_count": 5,
@@ -138,7 +140,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
      "execution_count": 7,
@@ -152,22 +154,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2"
+       "3"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "len(env.observation_space)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "env.discrete_action_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = env.agents[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0., 0.])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a.action."
    ]
   },
   {
