--- a/maddpg/nbs/agent.ipynb
+++ b/maddpg/nbs/agent.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "ecological-holmes",
+   "id": "sustained-porcelain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "classical-patch",
+   "id": "abroad-cassette",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "moral-selection",
+   "id": "approved-series",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "anticipated-flesh",
+   "id": "twenty-giving",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,8 +82,6 @@
     "        self.target_actor.set_weights(actor_weights)\n",
     "        self.target_critic.set_weights(critic_weights)\n",
     "        \n",
-    "        self.noise = np.random.uniform(size=self.n_actions)\n",
-    "        \n",
     "    def update_target_networks(self, tau):\n",
     "        actor_weights = self.actor.weights\n",
     "        target_actor_weights = self.target_actor.weights\n",
@@ -101,8 +99,9 @@
     "        self.target_critic.set_weights(target_critic_weights)\n",
     "        \n",
     "    def get_actions(self, actor_states):\n",
+    "        noise = tf.random.uniform(shape=[self.n_actions])\n",
     "        actions = self.actor(actor_states)\n",
-    "        actions = actions + self.noise\n",
+    "        actions = actions + noise\n",
     "\n",
     "        return actions.numpy()[0]\n",
     "    \n",
@@ -122,7 +121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "varying-ozone",
+   "id": "regulated-bahrain",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "romance-performance",
+   "id": "interesting-intranet",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "equivalent-child",
+   "id": "aggregate-victor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "governmental-cornell",
+   "id": "oriented-seattle",
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "apart-benefit",
+   "id": "partial-melbourne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -184,14 +183,14 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dental-message",
+   "id": "early-temperature",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 0.71558146, -1.47510576,  0.59780388, -0.6180208 ,  0.71558146,\n",
-       "       -1.47510576,  1.30439373,  0.31059763, -0.02751293, -0.36316338])"
+       "array([-0.74174155,  0.10657393, -0.74174155,  0.10657393, -1.28352569,\n",
+       "       -0.61911877, -0.09738957, -0.21368209, -1.83250487, -0.67595002])"
       ]
      },
      "execution_count": 10,
@@ -206,13 +205,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "extended-brown",
+   "id": "level-aviation",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<networks.Actor at 0x7fbe3122e6a0>"
+       "<networks.Actor at 0x7fd6641ab340>"
       ]
      },
      "execution_count": 11,
@@ -227,13 +226,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "hungry-michigan",
+   "id": "closed-button",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.4568894, 0.5858264, 0.6161   , 1.2974641, 1.2081289],\n",
+       "array([0.70874125, 0.7994535 , 1.1942161 , 1.0524472 , 1.392436  ],\n",
        "      dtype=float32)"
       ]
      },
@@ -249,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "alien-angola",
+   "id": "driven-campaign",
    "metadata": {},
    "outputs": [
     {
